test_bit_input_stream_exe = executable('test_BitInputStream.cpp.executable',
    sources: ['test_BitInputStream.cpp'],
    dependencies: [input_dep, gtest_dep])
test('my BitInputStream test', test_bit_input_stream_exe)

test_bit_output_stream_exe = executable('test_BitOutputStream.cpp.executable',
    sources: ['test_BitOutputStream.cpp'],
    dependencies: [output_dep, gtest_dep])
test('my BitOutputStream test', test_bit_output_stream_exe)

test_HCTree_exe = executable('test_HCTree.cpp.executable',
    sources: ['test_HCTree.cpp'],
    dependencies: [encoder_dep, gtest_dep])
test('my HCTree test', test_HCTree_exe)
